--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^3.3.0",
+    "@sanity/image-url": "^1.0.1",
     "clsx": "^1.1.1",
     "next": "12.1.0",
     "next-seo": "^5.1.0",
