--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@vercel/node": "^3.0.3",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "sass": "^1.49.9"
