--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "sass": "^1.49.9"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
